# homeassistant-eon-next

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  requirements_dev.txt
custom_components/eon_next/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py
custom_components/eon_next/translations/: en.json
docs/superpowers/plans/: 2026-05-01-homeassistant-eon-next-project-setup.md  2026-05-02-billing-and-gas.md  2026-05-02-billing-statement.md  2026-05-02-electricity-entity-id-rename.md  2026-05-02-electricity-rename.md  2026-05-02-meter-readings.md  2026-05-03-electricity-migration-cleanup.md  2026-05-03-smartflex-devices.md  2026-05-03-smartflex-live-query-remodel.md
docs/superpowers/specs/: 2026-05-01-homeassistant-eon-next-project-design.md  2026-05-02-billing-and-gas-design.md  2026-05-02-billing-statement-design.md  2026-05-02-electricity-entity-id-rename-design.md  2026-05-02-electricity-rename-design.md  2026-05-02-meter-readings-design.md  2026-05-03-electricity-migration-cleanup-design.md  2026-05-03-smartflex-devices-design.md  2026-05-03-smartflex-live-query-remodel-design.md
scripts/: check.sh  sync_to_ha.sh
tests/components/eon_next/: test_api.py  test_init.py  test_sensor.py
