[project]
name = "homeassistant-eon-next"
version = "0.1.0"
description = "Home Assistant custom integration for E.ON Next"
readme = "README.md"
requires-python = ">=3.13"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
